--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "devDependencies": {
         "@bazel/ibazel": "^0.2.0",
         "@bazel/buildifier": "^0.20.0",
-        "@bazel/typescript": "0.19.1",
+        "@bazel/typescript": "lucidsoftware/bazel-typescript",
         "@types/jasmine": "^2.8.2",
         "@types/long": "^4.0.0",
         "@types/node": "7.0.18",
